tests/errors/typeMismatch.milo
// @error: type mismatch

extern fn puts(s: *u8): i32

fn main(): i32 {
    let x: i32 = "hello"
    return 0
}
